--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-	"scripts": {
-	},
-	"devDependencies": {
-		"tslint": "^6.1.3",
-		"typescript": "^5.3.3"
-	}
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.64",
+    "@swc/core": "^1.3.105",
+    "@swc/jest": "^0.2.31",
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2",
+    "tslint": "^6.1.3",
+    "typescript": "^5.3.3"
+  }
 }
