--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@swc/core": "^1.3.105",
     "@swc/jest": "^0.2.31",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
